# davis

./: .gitignore  README.md  READMEen.md  pyproject.toml
.github/workflows/: release.yml
data/: .gitignore
data/PP/Matsuyama/: UserInfo.csv.dvc  UserInfo.csv.schema.yaml  locData.csv.dvc  locData.csv.schema.yaml  trip.csv.dvc  trip.csv.schema.yaml
data/PP/Matsuyama-Shinjuku/: feeder_all.csv.dvc  feeder_all.csv.schema.yaml  locData_Matsuyama_Shinjuku2022.csv.dvc  locData_Matsuyama_Shinjuku2022.csv.schema.yaml  trip_all.csv.dvc  trip_all.csv.schema.yaml
data/PP/Shibuya/: codes_2021.csv.dvc  codes_2021.csv.schema.yaml  feeder_2021.csv.dvc  feeder_2021.csv.schema.yaml  feeder_2023.csv.dvc  feeder_202301.csv.dvc  (+20 more)
data/PT_data/: PTdata.csv.dvc  PTdata.csv.schema.yaml  README.docx.dvc
data/Tohoku_History/: README.md.dvc  df_ex_var.csv.dvc  df_ex_var.csv.schema.yaml  df_ex_var_disaster.csv.dvc  df_ex_var_disaster.csv.schema.yaml  df_history.csv.dvc  df_history.csv.schema.yaml  df_individual.csv.dvc  df_individual.csv.schema.yaml  df_individual_disaster.csv.dvc  df_individual_disaster.csv.schema.yaml  df_init.csv.dvc  df_init.csv.schema.yaml  df_initial.csv.dvc  df_initial.csv.schema.yaml  df_initial_disaster.csv.dvc  df_initial_disaster.csv.schema.yaml  df_stay_var.csv.dvc  df_stay_var.csv.schema.yaml  df_stay_var_disaster.csv.dvc  df_stay_var_disaster.csv.schema.yaml  initial_information.csv.dvc  initial_information.csv.schema.yaml
davis.egg-info/: PKG-INFO  SOURCES.txt
src/base_model/: README.md  READMEen.md  docker-compose.yml
src/dataset_cli/: pyproject.toml
(+442 files in other folders)
