[project]
name = "davis"
version = "0.1.0"
requires-python = ">=3.13"

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.10"]

[tool.uv.workspace]
members = ["src/*"]

[tool.ruff]
select = ["ALL"]
ignore = ["D", "E501", "S101", "RUF001", "RUF003"]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["data"]

[project.urls]
Repository = "https://github.com/bin-utokyo/davis"
